# vera-plugin-interface

./: PLUGIN_DEVELOPER_GUIDE.md  README.md  pyproject.toml
src/aisc_plugin_interface/: __init__.py  base_evaluation_plugin.py  cli.py  utils.py
src/aisc_plugin_interface/decorators/: evaluation_input.py  metric.py
src/aisc_plugin_interface/input_providers/: base_input_provider.py  csv_input_provider.py
src/aisc_plugin_interface/models/: evaluation_input.py  measure.py  task.py
src/aisc_plugin_interface/templates/: init.py.tpl  plugin.py.tpl
