[project]
name = "aisc-plugin-interface"
version = "0.2.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "rich>=14.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aisc_plugin_interface"]

[tool.hatch.build]
include = [
  "src/aisc_plugin_interface/templates/*.tpl",
]

[project.scripts]
aisc-plugin-interface = "aisc_plugin_interface.cli:main"
