[project]
name = "aisc-plugin-interface"
version = "0.2.5"
description = "Plugin interface for the AISC evaluation framework"
authors = [{ name = "Sean Blevins", email = "sean.blevins@uni.lu" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "rich>=14.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aisc_plugin_interface"]

[tool.hatch.build.targets.sdist]
include = ["src/aisc_plugin_interface"]

[project.scripts]
aisc-plugin-interface = "aisc_plugin_interface.cli:main"
